--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -22,6 +22,7 @@
               <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="after">
                 <field name="talla" readonly="1"/>
                 <field name="color" readonly="1"/>
+                <field name="default_code" readonly="1"/>
               </xpath>
                 <field name="move_lines" position="after">
                     <div id="auto_scan" class="alert alert-info" role="alert" style="margin-bottom:0px;" >
@@ -44,6 +45,5 @@
               </field>
              </field>
          </record>
-          
      </data>
 </odoo>
