--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -4,17 +4,35 @@
     <data>
         <record id="barcode_scanning_inventory" model="ir.ui.view">
             <field name="name">Barcode Scanning Inventory</field>
-            <field name="model">stock.picking</field>
+            <field name="model">stock.inventory</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='location_id']" position="after">
-                    <field name="barcode"/>
+                <xpath expr="//field[@name='line_ids']" position="before">
+                    <div id="auto_scan" class="alert alert-info" role="alert" style="margin-bottom:0px;" >
+                        <h2><field name="log_scanner"/></h2>
+                        <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
+                            <h3>Escaneo Automatico: <field name="inventory_barcode" placeholder="Codigo de barras"/></h3>
+                        </div>
+                    </div>
                 </xpath>
-                <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']" position="before">
-                    <field name="barcode"/>
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='product_id']" position="after">
+                    <field name="talla"/>
+                    <field name="color"/> 
                 </xpath>
             </field>
         </record>
+        <record id="barcode_scanning_inventory" model="ir.ui.view">
+          <field name="name">Add Tributes to Product</field>
+          <field name="model">product.template</field>
+          <field name="inherit_id" ref="product.product_template_only_form_view"/>
+          <field name="arch" type="xml">
+              <field name="categ_id" position="after">
+                  <field name="default_talla"/>
+                  <field name="default_color"/>
+                  <field name="old_code"/>
+              </field>
+          </field>
+      </record>
     </data>
 
 </odoo>
