--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                 </xpath>
-                <xpath expr="//field[@name='line_ids']/tree/field[@name='product_id']" position="after">
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='location_id']" position="before">
                     <field name="talla"/>
                     <field name="color"/> 
                 </xpath>
