--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -2,12 +2,12 @@
 <odoo>
 
     <data>
-        <record id="barcode_scanning_inventory" model="ir.ui.view">
+        <record id="barcode_scanning_inventory_1" model="ir.ui.view">
             <field name="name">Barcode Scanning Inventory</field>
             <field name="model">stock.inventory</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='product_id']" position="after">
+                <xpath expr="//field[@name='line_ids']" position="before">
                     <div id="auto_scan" class="alert alert-info" role="alert" style="margin-bottom:0px;" >
                         <h2><field name="log_scanner"/></h2>
                         <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
@@ -15,7 +15,7 @@
                         </div>
                     </div>
                 </xpath>
-                <xpath expr="//field[@name='line_ids']/tree/field[@name='location_id']" position="before">
+                <xpath expr="//field[@name='line_ids']/tree/field[@name='product_id']" position="after">
                     <field name="talla"/>
                     <field name="color"/> 
                 </xpath>
