--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -22,12 +22,12 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_form"/>
             <field name="arch" type="xml">
-              <xpath expr="//field[@name='move_lines']/tree/field[@name='product_id']" position="after">
+              <xpath expr="//field[@name='move_line_ids_without_package']/tree/field[@name='product_id']" position="after">
                 <field name="talla" readonly="1"/>
                 <field name="color" readonly="1"/>
                 <field name="default_code" readonly="1"/>
               </xpath>
-                <field name="move_lines" position="after">
+                <field name="move_line_ids_without_package" position="after">
                     <div id="auto_scan" class="alert alert-info" role="alert" style="margin-bottom:0px;" >
                         <h2><field name="log_scanner"/></h2>
                         <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
