--- a/views/stock_picking.xml
+++ b/views/stock_picking.xml
@@ -31,7 +31,7 @@
                     <div id="auto_scan" class="alert alert-info" role="alert" style="margin-bottom:0px;" >
                         <h2><field name="log_scanner"/></h2>
                         <div class="alert alert-info" role="alert" style="margin-bottom:0px;" >
-                            <h3>Escaneo Automatico: <field name="temp_barcode" placeholder="Codigo de barras"/></h3>
+                            <h3>Escaneo Automatico: <field name="inventory_barcode" placeholder="Codigo de barras"/></h3>
                         </div>
                     </div>
                 </field>
